// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        Object {
          "paddingHorizontal": 0,
        },
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {activity} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
      style={
        Array [
          undefined,
          false,
        ]
      }
      type="small"
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
              "marginLeft": 5,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {children} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 20,
                "fontWeight": "700",
                "letterSpacing": -1.2,
                "lineHeight": 22,
              },
              false,
              Object {},
            ]
          }
        >
          10
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 20,
                "fontWeight": "700",
                "letterSpacing": -1.2,
                "lineHeight": 22,
              },
              false,
              Object {
                "fontWeight": "600",
                "transform": Array [
                  Object {
                    "scale": 0.8,
                  },
                ],
              },
            ]
          }
        >
          €
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {color} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "red",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {contained} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {disabled} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        Object {
          "opacity": 0.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {icon} & {title} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/apps.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
              "marginLeft": 5,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {icon} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        Object {
          "paddingHorizontal": 0,
        },
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/apps.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {outlined} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "borderWidth": 1,
        },
        Object {
          "borderColor": "#9b9b9b",
        },
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#9b9b9b",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {primary} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#bdbdbd",
        },
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {responsive} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": -0.3,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {rounded} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      Object {
        "borderRadius": 22.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        Object {
          "borderRadius": 22.5,
        },
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 22.5,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {secondary} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#424242",
        },
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {small} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "height": 30,
          "minWidth": 30,
          "paddingHorizontal": 15,
        },
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": -0.3,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {style} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Button> when {title} 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "color": "#ffffff",
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "letterSpacing": -0.4,
            },
          ]
        }
      >
        Press me
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;
